--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,9 @@ services:
       - '8080:8080'
     depends_on:
       - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_NAME: files
+      DB_USER: files
+      DB_PASSWORD: files
