Enable multi-part requests to allow file uploads. Also disable spring mvc's automatic mapping of exceptions so we can inject our own

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+
+# This enables file uploads up to 50MB each.
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+# Disable spring's default error responses
+server.error.whitelabel.enabled=false
+# So we can catch invalid urls and throw 404s
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
