Move the database initialization script to docker-compose, so it runs the first time the db container is created.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: always
     volumes:
       - .volumes/mysql:/var/lib/mysql
+      - ./data:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: files
       MYSQL_USER: files
